# luna-melody

./: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
backend/: .gitignore  helpers.py  main.py  pyproject.toml
src/: index.css
src/components/midi/: FallingPiano.tsx  MidiPlayer.tsx  PianoRoll.tsx  SeekBar.tsx
src/pages/: Index.tsx
